{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 3180,
  "lineage": "6ffaaee5-dba8-1515-f605-81e0f27c1d7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_load_balancer_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0223c5dab8907af4d",
            "association_id": "eipassoc-018acf3c73a8c4bba",
            "domain": "vpc",
            "id": "eipalloc-0223c5dab8907af4d",
            "instance": "i-04d0b983aa555a040",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0af1efe4c2041370e",
            "private_dns": "ip-10-0-1-10.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-15-220-241-166.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-load-balancer-eip-0"
            },
            "tags_all": {
              "Name": "app-load-balancer-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042a02b904e3f622d",
            "association_id": "eipassoc-0eee91bf823d9256b",
            "domain": "vpc",
            "id": "eipalloc-042a02b904e3f622d",
            "instance": "i-01b452c1f16e3823c",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0147413194d2c8293",
            "private_dns": "ip-10-0-2-10.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-15-220-241-173.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-load-balancer-eip-1"
            },
            "tags_all": {
              "Name": "app-load-balancer-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_host_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0718b3291f6556cce",
            "association_id": "eipassoc-0aca8b115352c16ed",
            "domain": "vpc",
            "id": "eipalloc-0718b3291f6556cce",
            "instance": "i-050ffd70b32f854e1",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0b7bf3995a0a2c671",
            "private_dns": "ip-10-0-1-45.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-15-220-241-3.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion-host-eip"
            },
            "tags_all": {
              "Name": "bastion-host-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion_host",
            "aws_internet_gateway.ig",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0338067425e79bbfb",
            "association_id": "eipassoc-0c9b57a400305183f",
            "domain": "vpc",
            "id": "eipalloc-0338067425e79bbfb",
            "instance": "i-02fb0cd061b2c8cc4",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-041d9f364a40fc884",
            "private_dns": "ip-10-0-1-46.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-15-220-241-47.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway-eip"
            },
            "tags_all": {
              "Name": "nat-gateway-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_internet_gateway.ig",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_load_balancer_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03443ca72dcf8756b",
            "association_id": "eipassoc-019e292bdc1630522",
            "domain": "vpc",
            "id": "eipalloc-03443ca72dcf8756b",
            "instance": "i-0d0e460b61a8033f9",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-0fb5a967b0c16e543",
            "private_dns": "ip-10-0-1-11.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-15-220-241-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web-load-balancer-eip-0"
            },
            "tags_all": {
              "Name": "web-load-balancer-eip-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0911d1bd9144756bd",
            "association_id": "eipassoc-032859a128132b0b0",
            "domain": "vpc",
            "id": "eipalloc-0911d1bd9144756bd",
            "instance": "i-081e8478d34f872a5",
            "network_border_group": "ap-southeast-1-bkk-1",
            "network_interface": "eni-02766f4c9127d9cbb",
            "private_dns": "ip-10-0-2-11.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.11",
            "public_dns": "ec2-15-220-241-31.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "15.220.241.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "web-load-balancer-eip-1"
            },
            "tags_all": {
              "Name": "web-load-balancer-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_load_balancer",
            "aws_internet_gateway.ig",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-04d0b983aa555a040",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d0b983aa555a040",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af1efe4c2041370e",
            "private_dns": "ip-10-0-1-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0cb98f543c5b94c62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f0e5124cb48a4537"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "app_load_balancer-0"
            },
            "tags_all": {
              "Name": "app_load_balancer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0e5124cb48a4537"
            ]
          },
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-01b452c1f16e3823c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b452c1f16e3823c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0147413194d2c8293",
            "private_dns": "ip-10-0-2-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-08a127eb8034afe44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f0e5124cb48a4537"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083532e1a2cbd3294",
            "tags": {
              "Name": "app_load_balancer-1"
            },
            "tags_all": {
              "Name": "app_load_balancer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0e5124cb48a4537"
            ]
          },
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0690bfdd89cb57107",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0690bfdd89cb57107",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0380a070f350ffaee",
            "private_dns": "ip-10-0-3-100.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-09757664fc21ee61f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098b197cc934c3135"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "appserver-1"
            },
            "tags_all": {
              "Name": "appserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098b197cc934c3135"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0f61b1ae7a55efeb4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f61b1ae7a55efeb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0733969233582ed0c",
            "private_dns": "ip-10-0-4-100.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0e0789aa2e749b063",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-098b197cc934c3135"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "appserver-2"
            },
            "tags_all": {
              "Name": "appserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098b197cc934c3135"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-050ffd70b32f854e1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050ffd70b32f854e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7bf3995a0a2c671",
            "private_dns": "ip-10-0-1-45.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0caa93019c8e25aab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0536f93e75b71823b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "bastionhost-server"
            },
            "tags_all": {
              "Name": "bastionhost-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0536f93e75b71823b"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-03a8e38b3d5d110b9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a8e38b3d5d110b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005d2f474291e4e4b",
            "private_dns": "ip-10-0-3-11.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-01d41dba5bb4ac95a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005cccf12e9148776"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "db_load_balancer"
            },
            "tags_all": {
              "Name": "db_load_balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005cccf12e9148776"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-02a3b41fd7da2e725",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a3b41fd7da2e725",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041ee3f3a22016502",
            "private_dns": "ip-10-0-3-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-092f25482ce2c8578",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c985d6470cbb1312"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "dbserver-1"
            },
            "tags_all": {
              "Name": "dbserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c985d6470cbb1312"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-091e7d487daf3cb75",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091e7d487daf3cb75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05fe1c6131d206bea",
            "private_dns": "ip-10-0-4-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0e8e768af8c698cbf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c985d6470cbb1312"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "dbserver-2"
            },
            "tags_all": {
              "Name": "dbserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c985d6470cbb1312"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0343d9bce2cedf00f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0343d9bce2cedf00f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed228d22fd11f82b",
            "private_dns": "ip-10-0-5-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-07b41dfd750e4d208",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c985d6470cbb1312"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097291f12bc435661",
            "tags": {
              "Name": "dbserver-3"
            },
            "tags_all": {
              "Name": "dbserver-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c985d6470cbb1312"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "file_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0caa87ee2d1988b1b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 1500,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-03000aa76e9e625f5",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caa87ee2d1988b1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056c9959e0f6be366",
            "private_dns": "ip-10-0-3-120.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-054bdd7db38130115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bad6a2f546dd6bf5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "fileserver-1"
            },
            "tags_all": {
              "Name": "fileserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bad6a2f546dd6bf5"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-05c1f8db403792845",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 1500,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0550b944319007a49",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c1f8db403792845",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038440de391ec8dc5",
            "private_dns": "ip-10-0-4-120.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-032872547556c63bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bad6a2f546dd6bf5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "fileserver-2"
            },
            "tags_all": {
              "Name": "fileserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bad6a2f546dd6bf5"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_gateway_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-02fb0cd061b2c8cc4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fb0cd061b2c8cc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041d9f364a40fc884",
            "private_dns": "ip-10-0-1-46.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0dc7e2c049bffb8e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0474fd29b7dfc8a53"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "natgateway-server"
            },
            "tags_all": {
              "Name": "natgateway-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0474fd29b7dfc8a53"
            ]
          },
          "dependencies": [
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0d0e460b61a8033f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0e460b61a8033f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb5a967b0c16e543",
            "private_dns": "ip-10-0-1-11.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0b4511799255b37f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08db9349e3e23646d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0636ee283b755af4d",
            "tags": {
              "Name": "web_load_balancer-0"
            },
            "tags_all": {
              "Name": "web_load_balancer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08db9349e3e23646d"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-081e8478d34f872a5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081e8478d34f872a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02766f4c9127d9cbb",
            "private_dns": "ip-10-0-2-11.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-09cf0853b49006e74",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08db9349e3e23646d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083532e1a2cbd3294",
            "tags": {
              "Name": "web_load_balancer-1"
            },
            "tags_all": {
              "Name": "web_load_balancer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08db9349e3e23646d"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-0308c920dd9e38808",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0308c920dd9e38808",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032d5fe8f55c21e2f",
            "private_dns": "ip-10-0-3-80.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-04ccc2bf6d62e4c58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d31c0db86d490e55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c561511973619e9",
            "tags": {
              "Name": "webserver-1"
            },
            "tags_all": {
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d31c0db86d490e55"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06292ffafe4773f6c",
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:instance/i-084ce9529837128b3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084ce9529837128b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "localzone-proj-general-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0754a6cbdc485dd7b",
            "private_dns": "ip-10-0-4-80.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:710623010114:key/5ac23ca6-ced6-4f41-b448-247eaecaeaa3",
                "throughput": 0,
                "volume_id": "vol-0173f2ffefbf0daa2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d31c0db86d490e55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea",
            "tags": {
              "Name": "webserver-2"
            },
            "tags_all": {
              "Name": "webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d31c0db86d490e55"
            ]
          },
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:internet-gateway/igw-057d5f47e04a5831f",
            "id": "igw-057d5f47e04a5831f",
            "owner_id": "710623010114",
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-igw"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-igw"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af62bf1d6e8e21fa1080289494",
            "instance_id": "i-02fb0cd061b2c8cc4",
            "instance_owner_id": "710623010114",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-041d9f364a40fc884",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af62bf1d6e8e21fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_gateway_instance",
            "aws_route_table.private",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057d5f47e04a5831f",
            "id": "r-rtb-093bdd1e4223bb6cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093bdd1e4223bb6cb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:route-table/rtb-0af62bf1d6e8e21fa",
            "id": "rtb-0af62bf1d6e8e21fa",
            "owner_id": "710623010114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0fba449b79dcaae26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0e8145c44b54e6021",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-private-route-table"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:route-table/rtb-093bdd1e4223bb6cb",
            "id": "rtb-093bdd1e4223bb6cb",
            "owner_id": "710623010114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057d5f47e04a5831f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-public-route-table"
            },
            "tags_all": {
              "Environment": "localzone-proj-bkk",
              "Name": "localzone-proj-bkk-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc0251eab4947dc3",
            "route_table_id": "rtb-0af62bf1d6e8e21fa",
            "subnet_id": "subnet-09c561511973619e9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005914b55744407ff",
            "route_table_id": "rtb-0af62bf1d6e8e21fa",
            "subnet_id": "subnet-0a5d04a6a1c7ab0ea"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08735b48eff004f68",
            "route_table_id": "rtb-0af62bf1d6e8e21fa",
            "subnet_id": "subnet-097291f12bc435661"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffb7b5541567fc3b",
            "route_table_id": "rtb-093bdd1e4223bb6cb",
            "subnet_id": "subnet-0636ee283b755af4d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05db08191261e0ed9",
            "route_table_id": "rtb-093bdd1e4223bb6cb",
            "subnet_id": "subnet-083532e1a2cbd3294"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0f0e5124cb48a4537",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0e5124cb48a4537",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230427015828442800000003",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-098b197cc934c3135",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098b197cc934c3135",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8020,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8020
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d31c0db86d490e55",
                  "sg-0f0e5124cb48a4537"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230427015831980500000005",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0536f93e75b71823b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0536f93e75b71823b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230427015826701400000001",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-005cccf12e9148776",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005cccf12e9148776",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 6032,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098b197cc934c3135"
                ],
                "self": false,
                "to_port": 6032
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 6033,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098b197cc934c3135"
                ],
                "self": false,
                "to_port": 6033
              }
            ],
            "name": "terraform-20230427015833842000000006",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0c985d6470cbb1312",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c985d6470cbb1312",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-005cccf12e9148776"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230427015836579300000008",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0d8eb093a19c87b9f",
            "description": "Default SG to alllow traffic from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0d8eb093a19c87b9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "localzone-proj-bkk-default-sg",
            "name_prefix": "",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "localzone-proj-bkk-default-sg"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "file_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0bad6a2f546dd6bf5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bad6a2f546dd6bf5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0536f93e75b71823b",
                  "sg-098b197cc934c3135",
                  "sg-0d31c0db86d490e55"
                ],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098b197cc934c3135"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230427015833846500000007",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_gateway_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0474fd29b7dfc8a53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0474fd29b7dfc8a53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230427015856480400000009",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-08db9349e3e23646d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08db9349e3e23646d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230427015828442700000002",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:security-group/sg-0d31c0db86d490e55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d31c0db86d490e55",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0536f93e75b71823b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08db9349e3e23646d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230427015830195800000004",
            "name_prefix": "terraform-",
            "owner_id": "710623010114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_healthcheck_instance_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-005cccf12e9148776",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-1372841674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-005cccf12e9148776",
            "security_group_rule_id": "sgr-03e4a9c7f2c088348",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0474fd29b7dfc8a53",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-4156263429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0474fd29b7dfc8a53",
            "security_group_rule_id": "sgr-01fec8219044e8010",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0536f93e75b71823b",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-2399311495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0536f93e75b71823b",
            "security_group_rule_id": "sgr-05a8a1e305e2906a6",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-08db9349e3e23646d",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-2252621630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08db9349e3e23646d",
            "security_group_rule_id": "sgr-08c212b4fcdd52091",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0bad6a2f546dd6bf5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-3474644845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bad6a2f546dd6bf5",
            "security_group_rule_id": "sgr-0e643697bc76c605f",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0c985d6470cbb1312",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-322977463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c985d6470cbb1312",
            "security_group_rule_id": "sgr-0bb9f7173a82d5a53",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0d31c0db86d490e55",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-128455126",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d31c0db86d490e55",
            "security_group_rule_id": "sgr-0d0c3a6f177e49800",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "sg-0f0e5124cb48a4537",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8020,
            "id": "sgrule-2932801141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0e5124cb48a4537",
            "security_group_rule_id": "sgr-0c95aac581d3c6bb0",
            "self": false,
            "source_security_group_id": "sg-098b197cc934c3135",
            "timeouts": null,
            "to_port": 8020,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_load_balancer_sg",
            "aws_security_group.app_server_sg",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.db_load_balancer_sg",
            "aws_security_group.db_server_sg",
            "aws_security_group.file_server_sg",
            "aws_security_group.nat_gateway_instance_sg",
            "aws_security_group.web_load_balancer_sg",
            "aws_security_group.web_server_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-09c561511973619e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c561511973619e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-1"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-1"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-0a5d04a6a1c7ab0ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5d04a6a1c7ab0ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-2"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-2"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-097291f12bc435661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097291f12bc435661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-private-subnet-3"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-private-subnet-3"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-0636ee283b755af4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0636ee283b755af4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-public-subnet-1"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-public-subnet-1"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:subnet/subnet-083532e1a2cbd3294",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1-bkk-1a",
            "availability_zone_id": "apse1-bkk1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083532e1a2cbd3294",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710623010114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "localzone-proj-bkk-public-subnet-2"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-public-subnet-2"
            },
            "vpc_id": "vpc-08f42dcaa88ce73bd"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:710623010114:vpc/vpc-08f42dcaa88ce73bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01321b17b552ed1b0",
            "default_route_table_id": "rtb-0b7715374005f3343",
            "default_security_group_id": "sg-0c3572e2b444e7ab1",
            "dhcp_options_id": "dopt-0ac2f15af5797b69f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f42dcaa88ce73bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7715374005f3343",
            "owner_id": "710623010114",
            "tags": {
              "Name": "localzone-proj-bkk-vpc"
            },
            "tags_all": {
              "Name": "localzone-proj-bkk-vpc"
            }
          }
        }
      ]
    }
  ]
}